@@ -28,6 +28,10 @@ debci (0.7) UNRELEASED; urgency=medium
   * Fix debci-status -l if there is just one package.
   * Add tests for debci-batch, covering skipping/re-running of tests under
     appropriate conditions and showing the cause for re-run in the log.
+  * Replace test/json_validity (in ruby) with test/test_json.sh (shell with
+    just calling ruby for the actual JSON validation). With that we can re-use
+    test_helper's test bed setup instead of having to replicate it all in
+    ruby.
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 16 May 2014 12:55:41 -0300
 
